--- a/login.html
+++ b/login.html
@@ -14,8 +14,8 @@
           <label for="password">Password:</label>
           <input type="text" id="txtPassword" name="password"><br>
 
-          <input type="submit" id="btnSubmit value="Save">
-          <input type="submit" id="btnCancel value="Cancel">
+          <input type="submit" id="btnSubmit" value="Submit">
+          <input type="submit" id="btnCancel" value="Cancel">
      </form>
 </body>
 </html>
