--- a/login.html
+++ b/login.html
@@ -8,7 +8,17 @@
      <title>Login Page</title>
      <script>
             function onLoginBtnClick() {
-                   alert(document.getElementById("username").value);
+                   const errorMsg = "INCOMPLETE LOGIN DETAILS";
+                   var username = document.getElementById("username").value.trim();
+                   var isUsernameEmpty = true;
+	           if(username.length === 0){
+                     var isUsernameEmpty = true;
+                     alert(errorMsg);
+                   } 
+                   else {
+                     isUsernameEmpty = false;
+                   }
+                   console.log("isUsernameEmpty=", isUsernameEmpty);
             }
             function onClearBtnClick() {
                    document.getElementById("username").value = "";
