fixed button type

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
           <label for="password">Password:</label>
           <input type="text" id="txtPassword" name="password"><br>
 
-          <button type="submit" onClick="onLoginBtnClick()">Login</button>
+          <button type="button" onClick="onLoginBtnClick()">Login</button>
           <button type="button" onClick="onClearBtnClick()">Clear</button>
      </form>
 </body>
