--- a/login.html
+++ b/login.html
@@ -11,9 +11,10 @@
                    const errorMsg = "INCOMPLETE LOGIN DETAILS";
                    var username = document.getElementById("username").value.trim();
                    var isUsernameEmpty = true;
-	           if(username.length === 0){
+	           if(username.length == 0) {
                      var isUsernameEmpty = true;
                      alert(errorMsg);
+                     errorMsg = "ERROR: Either the username or the password were not provided. Please try again."
                    } 
                    else {
                      isUsernameEmpty = false;
