Error messages encountered

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 	           if(username.length == 0) {
                      var isUsernameEmpty = true;
                      alert(errorMsg);
-                     errorMsg = "ERROR: Either the username or the password were not provided. Please try again."
+                     errorMsg = "ERROR: Either the username or the password were not provided. Please try again.";
                    } 
                    else {
                      isUsernameEmpty = false;
